--- a/login/templates/lista.html
+++ b/login/templates/lista.html
@@ -21,7 +21,7 @@
         <div class="mt-4 md:mt-0">
           <a href="{% url 'tela_login' %}" class="inline-flex items-center px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-medium rounded-lg transition duration-150 ease-in-out"><i class="fas fa-plus mr-2"></i> Novo Registro</a>
 
-          <a href="{% url 'tela_login' %}" class="inline-flex items-center px-4 py-2 bg-amber-600 hover:bg-amber-700 text-white text-sm font-medium rounded-lg transition duration-150 ease-in-out"></i> Sorteador</a>
+          <a href="{% url 'sorteio' %}" target="_blank" class="inline-flex items-center px-4 py-2 bg-amber-600 hover:bg-amber-700 text-white text-sm font-medium rounded-lg transition duration-150 ease-in-out"></i> Sorteador</a>
 
           {% comment %} <div class="mt-4">
             <a href="/admin/login/acesso/export/" class="bg-green-600 text-white px-4 py-2 rounded-lg text-sm font-bold"><i class="fas fa-file-excel mr-2"></i> Exportar para Excel</a>
