atualizacao de cores para Atesa e numero da extensao da matricula

--- a/login/templates/lista.html
+++ b/login/templates/lista.html
@@ -75,11 +75,11 @@
         Total de registros: <span class="font-bold text-gray-600">{{ acessos|length }}</span>
       </div>
     </div>
-    {% comment %} <script>
+    <script>
       // Define o tempo em milissegundos (5 minutos = 300.000 ms)
       setTimeout(function () {
         location.reload()
-      }, 300.000)
-    </script> {% endcomment %}
+      }, 60000)
+    </script> 
   </body>
 </html>
