--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -9,14 +9,16 @@
             --primary-color: #28a745;
             --primary-hover: #218838;
             --bg-color: #f4f7f6;
-            --back-gold: #e9bc00;
-            {% comment %} --back-atesa: #34a825; {% endcomment %}
+            --back-atesad: #e9bc00;
+            --back-atesa: #34a825;
+            --back_atesa:#fafeef;
             --text-color: #333;
 
 
         body { 
             font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
-            background-color: var(--back-gold);
+            background: #34A825;
+            background: linear-gradient(143deg,rgba(52, 168, 37, 1) 0%, rgba(250, 254, 239, 1) 50%, rgba(33, 136, 56, 1) 100%);
             color: var(--text-color);
             display: flex; 
             justify-content: center; 
@@ -71,7 +73,7 @@
         }
 
         button { 
-            background: var(--back-gold); 
+            background: var(--back-atesa); 
             color: white; 
             border: none; 
             width: 100%;
