--- a/login/templates/sorteio.html
+++ b/login/templates/sorteio.html
@@ -33,7 +33,7 @@
         justify-content: center;
         align-items: center;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        border: 8px solid #e9c524;
+        border: 8px solid #34a825;
         transition: all 0.5s ease;
         position: relative;
       }
@@ -56,7 +56,7 @@
       #contador {
         font-size: 80px;
         font-weight: bold;
-        color: #e9b528;
+        color: #34a825;
       }
       
       #nome-vencedor {
@@ -69,7 +69,7 @@
       
       .btn-lux {
         padding: 15px 30px;
-        background: #e7a71c;
+        background: #34a825;
         color: white;
         border: none;
         border-radius: 50px;
@@ -93,7 +93,7 @@
         <div id="fase-resultado" style="display: none; text-align: center;">
           <span style="font-size: 14px; color: #777;">VENCEDOR:</span>
           <div id="nome-vencedor">{{numero.nome}} - {{numero.matricula}}</div>
-          <small onclick="location.reload()" style="cursor:pointer; color: #e9b528;">Refazer</small>
+          <small onclick="location.reload()" style="cursor:pointer; color: #34a825;">Refazer</small>
         </div>
 
       </div>
@@ -138,7 +138,7 @@
         box.style.width = 'auto'
         box.style.minWidth = '250px'
         box.style.borderRadius = '20px' // Fica levemente quadrado para o nome
-        box.style.borderColor = '#ffc107' // Cor de "ouro" para o vencedor
+        box.style.borderColor = '#34a825' // Cor de "ouro" para o vencedor
       }
     </script>
   </body>
